Fix header's contrast. [skip ci]

--- a/server/hedley/themes/custom/hedley_theme/css/custom.css
+++ b/server/hedley/themes/custom/hedley_theme/css/custom.css
@@ -23,6 +23,12 @@
   font-size: inherit;
 }
 
+#header .header-nav-top li a,
+#header .header-nav-top li span,
+#header .header-nav-top li i {
+  color: #333;
+}
+
 .sticky-header-active #site-name {
   margin-top: 33px;
 }
